# pendragon

./: .gitignore  Cargo.toml  README.md  avalon.py  bot.py  pencog.py  pendragon_env.yml  settings.json  terminal_app.py  terminal_app_test.py  terminal_test.py
deprecated/: pencog.py  pendragon_env.yml  settings_old.json
docs/: Main.md  TestInput.txt
src/: lib.rs  main.rs  old_main.rs
