[package]
name = "pendragon"
version = "0.1.0"
authors = ["Harry Wang <harrywang703@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { default-features = false, features = ["client", "gateway",
"model", "rustls_backend"], version = "0.10.9" }