[package]
name = "pendragon"
version = "0.1.0"
authors = ["Harry Wang <harrywang703@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.2"
rand = "0.8.5"
serenity = { default-features = false, features = ["client", "gateway",
"model", "rustls_backend"], version = "0.10.9" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros"] }